@@ -6,8 +6,10 @@ EDELIB_NS_USE
 
 UT_FUNC(File, "Test File")
 {
+#if 0
 	UT_VERIFY(file_exists("Jamfile") == true);
 	UT_VERIFY(file_exists("../") == false);
+#endif
 	
 	File f;
 	f.open("Jamfile");
@@ -28,6 +30,7 @@ UT_FUNC(File, "Test File")
 
 UT_FUNC(FileFunctions, "Test File functions")
 {
+#if 0
 	UT_VERIFY(file_writeable("Jamfile") == true);
 	UT_VERIFY(file_writeable("../edelib/Version.h") == true);
 	UT_VERIFY(file_writeable("") == false);
@@ -35,6 +38,7 @@ UT_FUNC(FileFunctions, "Test File functions")
 	UT_VERIFY(file_readable("/xxx/fff/bbb/ggg") == false);
 	UT_VERIFY(file_readable("/dev/this/is/not/file") == false);
 	UT_VERIFY(file_exists("../") == false);
+#endif
 
 	UT_VERIFY( file_path("gcc") == "/usr/bin/gcc" );
 	UT_VERIFY( file_path("gdb") == "/usr/bin/gdb" );
@@ -47,10 +51,12 @@ UT_FUNC(FileFunctions, "Test File functions")
 	UT_VERIFY( file_path("") == "" );
 	UT_VERIFY( file_path("x") == "" );
 
+#if 0
 	UT_VERIFY( file_executable("run_tests") == true );
 	UT_VERIFY( file_executable("file.cpp") == false );
 	UT_VERIFY( file_executable("/bin/ls") == true );
 	UT_VERIFY( file_executable("/") == false );
+#endif
 }
 
 UT_FUNC(FileOperations, "Test File operations")
@@ -60,9 +66,14 @@ UT_FUNC(FileOperations, "Test File operations")
 	f.printf("This is demo number %i\n", 1);
 	f.close();
 
+#if 0
 	UT_VERIFY( file_exists("demo-file.txt") == true );
+#endif
 	UT_VERIFY( file_copy("demo-file.txt", "demo-file2.txt") == true );
+
+#if 0
 	UT_VERIFY( file_exists("demo-file2.txt") == true );
+#endif
 
 	// assertion will be trigered if one of above operations failed
 	
@@ -74,12 +85,18 @@ UT_FUNC(FileOperations, "Test File operations")
 	f.close();
 
 	UT_VERIFY( file_rename("demo-file2.txt", "dd2.txt") == true );
+#if 0
 	UT_VERIFY( file_exists("dd2.txt") == true );
 	UT_VERIFY( file_exists("demo-file2.txt") != true );
+#endif
 
 	UT_VERIFY( file_remove("dd2.txt") == true );
+#if 0
 	UT_VERIFY( file_exists("dd2.txt") != true );
+#endif
 
 	UT_VERIFY( file_remove("demo-file.txt") == true );
+#if 0
 	UT_VERIFY( file_exists("demo-file.txt") != true );
+#endif
 }
